<resources>
    <string name="app_name">SeriesFilm</string>
    <string name="login">Логин</string>
    <string name="sign_up">Регистрация</string>
    <string name="landing_heading">Смотрите фильмы где угодно и когда угодно</string>
    <string name="landing_description">Познакомьтесь с обширной коллекцией блокбастеров, вечной классики и последних релизов.</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="question_login">Еще нет аккаунта? Создайте!</string>
    <string name="question_sign_up">Уже есть аккаунт? Войдите!</string>
    <string name="create_acc">Создать аккаунт</string>
    <string name="username">Имя пользователя</string>
    <string name="home">Главная</string>
    <string name="favorites">Избранное</string>
    <string name="search">Поиск</string>
    <string name="search_for_title">Поиск по названию...</string>
    <string name="settings">Настройки</string>
    <string name="title_info">"Фильмотека" — это ваш персональный киноархив.</string>
    <string name="info_about_app">Простое и удобное приложение для тех, кто любит кино, но не хочет тратить время на оценки и рецензии.</string>
    <string name="info_about_developer">Приложение было разработано студентом третьего курса РТУ МИРЭА, Никитой Голованевым.</string>
    <string name="new_movie">Новые фильмы</string>
    <string name="account">Аккаунт</string>
    <string name="privacy">Приватность</string>
    <string name="storage">Список фильмов</string>
    <string name="help">Помощь</string>
    <string name="logout">Выйти из аккаунта</string>
    <string name="error_fetch_movies">Пожалуйста, проверьте своё интернет-соединение</string>
    <string name="update">Обновить</string>
    <string name="name">Имя</string>
    <string name="year">Год</string>
    <string name="director">Режиссер</string>
    <string name="film_backdrop">Постер фильма</string>
    <string name="theme">Тема</string>

</resources>