<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/breaking_bad"
    android:orientation="vertical"
    tools:context=".Activities.Landing">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/all"
        android:layout_width="match_parent"
        android:layout_height="297dp"
        android:layout_gravity="bottom"
        android:background="@drawable/background_rounded">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/textes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            app:layout_constraintTop_toTopOf="@id/all">

            <TextView
                android:id="@+id/heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center"
                android:text="@string/landing_heading"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="16dp"
                android:gravity="center"
                android:text="@string/landing_description"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/heading" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            app:layout_constraintTop_toBottomOf="@id/textes">

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_full"
                android:fontFamily="@font/inter"
                android:gravity="center"
                android:text="@string/login"
                android:textAllCaps="false"
                app:layout_constraintBottom_toTopOf="@id/sign_up"
                app:layout_constraintTop_toTopOf="@id/buttons" />

            <Button
                android:id="@+id/sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_round"
                android:fontFamily="@font/inter"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/green"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_btn"
                tools:layout_editor_absoluteX="16dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>